fix overflow partner table

--- a/booking-fe/src/pages/admin/component/PartnerRequestTable/PartnerRequestTable.css
+++ b/booking-fe/src/pages/admin/component/PartnerRequestTable/PartnerRequestTable.css
@@ -1,5 +1,5 @@
 .partnerRequestGrid {
-  height: 100%;
+  height: 80vh;
   width: 100%;
 }
 
